# railway-django-tutorial

./: pyproject.toml  requirements.txt
example/: settings.py
