[project]
name = "example"
dependencies = [
    "gunicorn",
    "django",
    "django-cors-headers",
    "whitenoise",
]

[project.optional-dependencies]
dev = [
    "django-stubs", 
    "uv", 
    "ruff", 
    "basedpyright"
]

[tool.ruff]
line-length = 90
fix = true
target-version = "py312"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
exclude = ["**/migrations/**"]
select = [ "E", "F", "B", "W", "Q", "A", "DJ",
    "UP", "ASYNC", "FA", "ISC", "RET", "SIM", "ARG", "PL", "RUF"]
extend-select = ["I001"]

preview = true

unfixable = ["F841"]
ignore = ["PLR0913", "ISC001", "PLC0415", "RUF012", "PLR0914", "PLR2004"]

[tool.django-stubs]
django_settings_module = "example.settings"

[tool.basedpyright]
typeCheckingMode = "standard"
